--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "author": "wilson lua",
   "description": "ast-test",
   "main": "app.js",
-  "scripts":{
-    "start": "node ./src/app.js"
+  "scripts": {
+    "start": "node ./src/app.js",
+    "test": "mocha test/*"
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "mocha": "^3.1.1",
+    "should": "^11.1.0"
+  },
+  "devDepencies": {}
 }
