--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "ast-test",
   "main": "app.js",
   "scripts": {
-    "start": "node ./src/app.js",
-    "test": "mocha test/*"
+    "start": "node ./src/app.coffee",
+    "test": "mocha test/* --compilers coffee:coffee-script/register"
   },
   "dependencies": {
+    "coffee-script": "^1.11.1",
     "mocha": "^3.1.1",
     "should": "^11.1.0"
   },
